Workers and offscreen tested and fixed. Also: - Changed file structure - Added several CSS changes - Added loading gif - Added options for offscreen and worker mode - Added updateOptions button

--- a/ParallelCoordinates.css
+++ b/ParallelCoordinates.css
@@ -7,8 +7,8 @@
 }
 
 /* ParCoords main styles */
-.pc-loading{
-    background-image: url(../loading.gif);
+.pc-loading {
+    background-image: url(loading.gif);
     background-repeat: no-repeat;
     padding-left: 20px;
     background-size: contain;
@@ -19,6 +19,15 @@
     display: flex;
     width: auto;
     flex-wrap: wrap;
+}
+
+.pc-container .dt-button {
+    padding: revert;
+    margin-right: 5px !important;
+}
+
+.select2-container {
+    font-family: 'Lato', sans-serif;
 }
 
 .pc-svg-container{
@@ -34,7 +43,7 @@
 }
 
 .pc-svg-container .tooltip {
-    position: absolute;
+    position: fixed;
     padding: 3px;
     font: 12px sans-serif;
     background: #e7e7e7;
@@ -105,10 +114,24 @@
     width: 100%;
 }
 
+.pc-table-contents input{
+    width: 100%;
+}
+
+.pc-table-contents tbody td{
+    overflow-wrap: break-word;
+    min-width: 100px;
+    max-width: 500px;
+}
+
 .pc-cluster-table-wrapper {
     width: 100%;
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.pc-cluster-table-wrapper > .ci-buttons-active {
+    overflow-x:hidden;
 }
 
 .pc-cluster-table-wrapper > div {
@@ -151,7 +174,8 @@ span.pc-graph-header-text :last-of-type {
     float:left;
 }
 
-svg, canvas{
+.pc-svg-container svg, 
+.pc-svg-container canvas {
     display: block;
     position: absolute;
     font: 10px sans-serif;
@@ -218,7 +242,7 @@ mark {
 }
 
 .ci-buttons-active{
-    height: 600px;
+    max-height: 600px;
 }
 
 @media (min-width: 800px){
@@ -259,6 +283,7 @@ mark {
     width: 100%;
     margin-left: 1px;
     margin-top: 1px;
+    padding-right: 4px;
 }
 
 .ci-button:hover{
